--- a/src/components/Modals/index.css
+++ b/src/components/Modals/index.css
@@ -1,6 +1,7 @@
 .overlay {
     top: 0;
     right: 0;
+    z-index: 1;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -12,16 +13,66 @@
 
 .modal {
     width: 450px;
-    padding: 15px;
+    overflow: hidden;
     border-radius: 10px;
     background: #fff;
 }
 
-.moadl-title{
-    font-weight: 600;
-    margin-bottom: 10px;
+.moadl-title {
+    border-bottom: 1px solid #D9D9D9;
 }
 
-.staff-position{
-    
+.moadl-title,
+.modal-content,
+.modal-footer {
+    padding: 15px;
+}
+
+.staff-profile {
+    gap: 5px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.staff-name {
+    font-weight: 700;
+}
+
+.staff-position {
+    font-size: 14px;
+    color: #00000049;
+}
+
+.modal-contros {
+    gap: 10px 0;
+    display: flex;
+    margin-top: 30px;
+    flex-direction: column;
+}
+
+.controls-group {
+    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.modal-control {
+    display: flex;
+    padding: 10px;
+    border-radius: 5px;
+    flex-direction: column;
+    border: 1px solid #D9D9D9;
+}
+
+.modal-control input {
+    width: 100%;
+}
+
+.control-label {
+    text-transform: uppercase;
+    font-size: 13px;
+}
+
+.modal-footer {
+    border-top: 1px solid #D9D9D9;
 }
